# physioqc

./: .all-contributorsrc  .autorc  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  MANIFEST.in  README.md  README.rst  codecov.yml  setup.cfg  setup.py  simplecardtest  simpleresptest
.circleci/: config.yml
.github/: labeler.yml
.github/workflows/: python-publish.yml
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst
physioqc/: __init__.py  _version.py  references.py  workflow.py
physioqc/cli/: run.py
physioqc/data/: bootstrap.yml
physioqc/interfaces/: interfaces.py  visualizations.py
physioqc/metrics/: __init__.py  cardiac.py  chest_belt.py  gas.py  multimodal.py  utils.py
testdata/: sub-007_ses-05_task-rest_run-01_physio.json
